[package]
name = "hat-trie-cache"
version = "0.1.0"
edition = "2021"
description = "A high-performance HAT-trie implementation with integrated quick-cache support for concurrent operations and binary encoding capabilities"
license = "MIT OR Apache-2.0"
authors = ["aeromilai"]
repository = "https://github.com/aeromilai/hat-trie-cache"
documentation = "https://docs.rs/hat-trie-cache"
homepage = "https://github.com/aeromilai/hat-trie-cache"
readme = "README.md"
keywords = ["trie", "hat-trie", "cache", "data-structure", "concurrent"]
categories = ["data-structures", "caching", "concurrency"]

[dependencies]
quick_cache = "0.4.0"
thiserror = "1.0"
parking_lot = "0.12"

[dev-dependencies]
rand = "0.8"
proptest = "1.3"
